--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,12 @@
 {
   "name": "Garage Sales",
   "short_name": "Garage Sales",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#111827",
+  "background_color": "#0a0f0a",
+  "theme_color": "#0aa777",
   "icons": [
-    {
-      "src": "./icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icons/icon_192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon_512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
